--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
   "name": "use-napi-rs-packages-with-bundlers",
-  "packageManager": "yarn@4.1.0"
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "packageManager": "yarn@4.1.0",
+  "devDependencies": {
+    "@node-rs/argon2": "^1.7.2",
+    "@types/webpack": "^5.28.5",
+    "esbuild": "^0.20.1",
+    "node-loader": "^2.0.0",
+    "rollup": "^4.12.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "run:esbuild": "yarn esbuild --bundle src/index.js --outfile=dist/esbuild.cjs --platform=node --loader:.node=copy --format=cjs && node dist/esbuild.cjs",
+    "run:webpack": "webpack --mode=production && node dist/bundled.cjs"
+  }
 }
